FIPS-1957 :: fix Tests